--- a/styles/PostCard.module.scss
+++ b/styles/PostCard.module.scss
@@ -4,9 +4,36 @@
   width: 80%;
   padding: 0;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 25% 60% 8% 7%;
+  grid-template-columns: 10% auto 10%;
   margin: 10% 0;
   h1 {
     font-weight: 400;
-    font-size: 24px;
+    font-size: 20px;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    text-align: center;
+    margin: auto 0;
   }
+  .excerpt {
+    width: 100%;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    text-align: center;
+    font-size: 14px;
+    margin: auto 0;
+  }
+  .readMore {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    font-size: 14px;
+    justify-self: end;
+    margin: 0;
+  }
+  &:hover {
+    color: white;
+    border: white solid 1px;
+  }
+  transition: ease all 1s;
 }
