--- a/styles/PostCard.module.scss
+++ b/styles/PostCard.module.scss
@@ -1,7 +1,7 @@
 .postCard {
   border: 1px black solid;
   height: 256px;
-  width: 80%;
+  width: 256px;
   padding: 0;
   box-sizing: border-box;
   display: grid;
